[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["vitaliywow <varabyeu.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
